<resources>
    <string name="app_name">ESC-Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Photo Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_newsfeed">News Feed</string>
    <string name="menu_events">Events</string>
    <string name="menu_officers">ESC Officers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Social media sharing</string>
    <string name="menu_newsletter">ESC Newsletter</string>

    <string name="poster_image">Poster Image</string>
    <string name="cover_image">Cover Image</string>
    <string name="officer_image">Profile Picture</string>
    <string name="button_confirm">Confirm</string>

    <string name="activity_events_date">Event Date: </string>
    <string name="activity_events_name">Event Name: </string>
    <string name="activity_events_start">From: </string>
    <string name="activity_events_end">To: </string>

    <string name="text_register">No account yet? Create one</string>
    <string name="text_member">Already a member? Login</string>
    <string name="text_not_member">No account yet? Create one</string>

    <string name="activity_newsfeed_date">Date: </string>
    <string name="activity_newsfeed_title">Article Title: </string>
    <string name="activity_newsfeed_author">Author: </string>

    <string name="activity_officers_role">Officer Role: </string>
    <string name="activity_officers_name">Officer Name: </string>
    <string name="activity_officers_major">Officer Major: </string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
