<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_newsfeed"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_newsfeed" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_local_florist_black_24dp"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_officers"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_officers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_camera_black_24dp"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_newsletter" />
        </menu>
    </item>

</menu>
